force-app/main/default/objects/Estadio__c/Estadio__c.object-meta.xml
<CustomObject>
    <label>Estádio</label>
    <nameField>
        <label>Estádio Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Estádios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>