force-app/main/default/objects/Estadio__c/fields/Capacidade__c.field-meta.xml
<CustomField>
    <fullName>Capacidade__c</fullName>
    <label>Capacidade</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>