force-app/main/default/objects/Estadio__c/fields/Data_Inauguracao__c.field-meta.xml
<CustomField>
    <fullName>Data_Inauguracao__c</fullName>
    <label>Data Inauguração</label>
    <type>Date</type>
</CustomField>