force-app/main/default/objects/Estadio__c/fields/Endereco__c.field-meta.xml
<CustomField>
    <fullName>Endereco__c</fullName>
    <label>Endereço</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>