force-app/main/default/objects/Estadio__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Pais__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Estados</valueSetName>
    </valueSet>
</CustomField>