force-app/main/default/objects/Estadio__c/fields/Gramado__c.field-meta.xml
<CustomField>
    <fullName>Gramado__c</fullName>
    <label>Gramado</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Natural</fullName>
            </value>
            <value>
                <fullName>Sintético</fullName>
            </value>
            <value>
                <fullName>Híbrido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>