force-app/main/default/objects/Estadio__c/fields/Localizacao__c.field-meta.xml
<CustomField>
    <fullName>Localizacao__c</fullName>
    <label>Localização</label>
    <scale>14</scale>
    <type>Location</type>
</CustomField>