force-app/main/default/objects/Estadio__c/fields/Municipio__c.field-meta.xml
<CustomField>
    <fullName>Municipio__c</fullName>
    <label>Município</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Pais__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Municipios</valueSetName>
    </valueSet>
</CustomField>