force-app/main/default/objects/Estadio__c/fields/Nome__c.field-meta.xml
<CustomField>
    <fullName>Nome__c</fullName>
    <label>Nome Popular</label>
    <length>128</length>
    <type>Text</type>
</CustomField>